2000-11-17	Jennifer Averret <jennifer@OARcorp.com>

	* src/imfs/imfs_eval.c: Always return imaginary node at mount points.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* src/imfs/Makefile.am, src/imfs/deviceio.c, src/imfs/imfs_chown.c,
	src/imfs/imfs_config.c, src/imfs/imfs_creat.c, src/imfs/imfs_debug.c,
	src/imfs/imfs_directory.c, src/imfs/imfs_eval.c, src/imfs/imfs_fchmod.c,
	src/imfs/imfs_free.c, src/imfs/imfs_fsunmount.c, src/imfs/imfs_gtkn.c,
	src/imfs/imfs_init.c, src/imfs/imfs_initsupp.c, src/imfs/imfs_link.c,
	src/imfs/imfs_mknod.c, src/imfs/imfs_mount.c, src/imfs/imfs_readlink.c,
	src/imfs/imfs_rmnod.c, src/imfs/imfs_stat.c, src/imfs/imfs_symlink.c,
	src/imfs/imfs_unixstub.c, src/imfs/imfs_unlink.c,
	src/imfs/imfs_unmount.c, src/imfs/imfs_utime.c, src/imfs/ioman.c,
	src/imfs/memfile.c, src/imfs/miniimfs_init.c:
	assoc.h, error.h, libio_.h, libio.h, and libcsupport.h moved 
	from libc to lib/include/rtems and now must be referenced as
	<rtems/XXX.h>.  Now we do not have to reach up and over to
	libc to pick them up.

2000-10-24	Joel Sherrill <joel@OARcorp.com>

	* src/imfs/imfs_config.c: New file containing IMFS configuration
	information split from libc/base_fs.c.
	* src/imfs/ioman.c: New file. Moved from lib/libc. Missed previously.
	* src/imfs/Makefile.am: Added imfs_config.c and ioman.c.

2000-10-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am, configure.in:  Introduce GNU canonicalization to libfs/.
	The approach is currently a bit of a hack as GNU canonicalization
	does not support the per-BSP build some of the other directories
	require.  As more of the tree is converted, this will become less 
	of an issue.

2000-10-19	Joel Sherrill <joel@OARcorp.com>
