@@ -1,3 +1,8 @@
+2000-11-28	Joel Sherrill <joel@OARcorp.com>
+
+	* src/imfs/memfile.c: Bug report from Sturniolo Jose
+	<jsturnio@nec.com.ar> where NULL pointer was dereferenced.
+
 2000-11-17	Jennifer Averret <jennifer@OARcorp.com>
 
 	* src/imfs/imfs_eval.c: Always return imaginary node at mount points.
